--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "rest"
   ],
   "dependencies": {
+    "@supabase/supabase-js": "^2.53.0",
     "axios": "^1.11.0",
     "compression": "^1.7.4",
     "dotenv": "^16.4.5",
