chore: 스크립트 종료 시 키 제거하도록 변경
 1. trap 명령어: 스크립트 종료 시 (성공/실패 무관)
  자동으로 민감한 파일들 삭제
  2. EXIT 시그널: 정상 종료, 에러 종료, 강제 종료 모든
  경우에 실행
  3. 자동 정리: 수동으로 rm 명령어 실행할 필요 없음

  trap이 처리하는 상황들:
  - 스크립트 정상 완료
  - 에러 발생으로 인한 중단
  - SIGTERM, SIGINT 등 강제 종료
  - GitHub Actions 타임아웃

  보안상 장점:
  - SSH 개인키가 디스크에 남아있을 위험 제거
  - 배포 아카이브 파일도 함께 정리
  - 실패 시에도 민감한 데이터 보호

bss-19-cd-workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,6 +60,9 @@ jobs:
         echo "$DEPLOY_KEY" > deploy_key
         chmod 600 deploy_key
         
+        # Ensure deploy_key and archive are always cleaned up
+        trap 'rm -f deploy_key book-lighthouse-app.tar.gz' EXIT
+        
         # Create deployment archive
         tar -czf book-lighthouse-app.tar.gz dist package.json package-lock.json ecosystem.config.js deploy-setup.sh
         
@@ -101,5 +104,4 @@ jobs:
           pm2 status
         EOF
         
-        # Clean up local files
-        rm deploy_key book-lighthouse-app.tar.gz
+        # Files will be cleaned up automatically by trap
