--- a/book-lighthouse-pm2.service
+++ b/book-lighthouse-pm2.service
@@ -9,9 +9,9 @@ Group=book-lighthouse
 WorkingDirectory=/opt/book-lighthouse-api
 
 # PM2로 실행
-ExecStart=/usr/local/bin/pm2 start ecosystem.config.js --env production
-ExecReload=/usr/local/bin/pm2 reload ecosystem.config.js --env production
-ExecStop=/usr/local/bin/pm2 stop ecosystem.config.js
+ExecStart=/usr/bin/env pm2 start ecosystem.config.js --env production
+ExecReload=/usr/bin/env pm2 reload ecosystem.config.js --env production
+ExecStop=/usr/bin/env pm2 stop ecosystem.config.js
 
 # 리소스 제한 (핵심!)
 MemoryMax=400M
