--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,8 +82,7 @@ jobs:
           sudo mkdir -p /var/log/book-lighthouse
           sudo chown -R $USER:$USER /var/log/book-lighthouse
           
-          # Stop specific app if exists (ignore if not found)
-          pm2 stop $APP_NAME || true
+          # Stop and delete specific app if exists (ignore if not found)
           pm2 delete $APP_NAME || true
           
           # Backup current deployment
@@ -95,7 +94,7 @@ jobs:
           cd ${APP_NAME}-deploy
           
           # Install production dependencies with memory limit (fallback to regular npm if systemd-run fails)
-          sudo systemd-run --scope -p MemoryMax=512M -p MemoryHigh=480M npm ci --omit=dev || npm ci --omit=dev
+          systemd-run --scope -p MemoryMax=512M -p MemoryHigh=480M npm ci --omit=dev || npm ci --omit=dev
           
           # Deploy to production location
           sudo cp -r dist package.json package-lock.json node_modules ecosystem.config.js $APP_DIR/
