chore: 환경 변수 추가
빌드 시 환경 변수가 없어 문제가 생긴다.

bss-19-cd-workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,16 @@ jobs:
       run: npm run test
       
     - name: Build application
+      env:
+        ALADDIN_API_KEY: ${{ secrets.ALADDIN_API_KEY }}
+        ALADDIN_API_BASE_URL: ${{ secrets.ALADDIN_API_BASE_URL }}
+        LIBRARY_API_KEY: ${{ secrets.LIBRARY_API_KEY }}
+        LIBRARY_API_BASE_URL: ${{ secrets.LIBRARY_API_BASE_URL }}
+        SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+        SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
+        PORT: ${{ secrets.PORT }}
+        CORS_ORIGIN: ${{ secrets.CORS_ORIGIN }}
+        NODE_ENV: production
       run: npm run build
 
   deploy:
@@ -49,6 +59,16 @@ jobs:
       run: npm ci
       
     - name: Build application
+      env:
+        ALADDIN_API_KEY: ${{ secrets.ALADDIN_API_KEY }}
+        ALADDIN_API_BASE_URL: ${{ secrets.ALADDIN_API_BASE_URL }}
+        LIBRARY_API_KEY: ${{ secrets.LIBRARY_API_KEY }}
+        LIBRARY_API_BASE_URL: ${{ secrets.LIBRARY_API_BASE_URL }}
+        SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+        SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
+        PORT: ${{ secrets.PORT }}
+        CORS_ORIGIN: ${{ secrets.CORS_ORIGIN }}
+        NODE_ENV: production
       run: npm run build
       
     - name: Deploy to server with systemd
